# embedded-linux

./: .gitignore  CLAUDE.md  README.md  build_all.sh
apps/: Makefile  audio_viz.c  audio_viz_full.c  iio_capture.c  level_sdl2.c  pong_fb.c  sdl2_dashboard.c
apps/i2s-audio-viz/: Makefile  audio_viz.c  audio_viz_full.c
apps/iio-buffered-capture/: Makefile
apps/level-display/: Makefile  jitter_logger.h  level_display.py  level_sdl2.c
apps/pong-fb/: Makefile  pong_fb.c
apps/processes-and-ipc/: Makefile  atomic_sensor.c
apps/qt_dashboard/: CMakeLists.txt  main.cpp
apps/qt_launcher/: AppButton.qml  CMakeLists.txt  Main.qml  home_button.py  main.cpp
apps/sdl2-dashboard/: Makefile
drivers/: Makefile  bmi160_spi.c  fpga_adc_iio.c  mcp9808.c  ssd1306_fb.c
overlays/: bmi160-iio.dts  bmi160-spi.dts  fpga-adc-spi.dts  mcp9808.dts  ssd1306-i2c.dts
scripts/: analyze_jitter.py  setup_pi.sh
scripts/acoustic-keystroke/: collect_keystrokes.py  features.py  live_inference.py  mic_test.py  train_model.py  typing_practice.py  visualize_pipeline.py
scripts/kiosk-service/: kiosk-select
scripts/signal-processing-demo/: README.md  fft_windowing.py  filter_response.py  mel_spectrogram_explorer.py  ml_decision_boundary.py  sampling_aliasing.py
scripts/ssh-login/: setup_pi.sh
services/: level-display-py.service  level-sdl2.service  sdl2-dashboard.service
solutions/: README.md
solutions/doom-on-pi/: doom_kiosk.sh  doom_touch_overlay.py  drm_overlay.c  imu_axis_finder.py  imu_doom.py  imu_test.py
solutions/drm-kms-test/: task_c_pipeline.sh
solutions/dsi-display/: dsi_benchmark.py  dsi_dashboard.py  dsi_draw.py  dsi_touch_draw.py
solutions/framebuffer-basics/: task_a_fb_math.py  task_b_gradient.py  task_c_fps_counter.py  task_e_wrong_stride.py
solutions/sdl2-rotating-cube/: CMakeLists.txt  step1_triangle.c  step2_square.c  step3_rotating_square.c  step4_cube.c
solutions/sdl2-touch-paint/: CMakeLists.txt  main.c
solutions/spi-display/: challenge1_partial.py  challenge3_bandwidth.py  spi_dashboard.py  touch_draw_complete.py  touch_draw_lines.py
